cmake_minimum_required(VERSION 3.13)
project(LanQiao)

set(CMAKE_CXX_STANDARD 98)

add_executable(basis1 基础练习/十六进制转八进制.cpp)
add_executable(basis2 基础练习/FJ的字符串.cpp)

add_executable(train1 算法训练/快速排序.cpp)
add_executable(train2 算法训练/数的划分.cpp)

add_executable(2013.6 历届试题/2013年第四届/CC++程序设计本科A组/6/前缀表达式.cpp)

add_executable(2015.9 历届试题/2015年第六届/C语言A组/9/垒骰子_3_矩阵快速幂.cpp)

add_executable(2016.1 历届试题/2016年第七届/C语言A组/1/网友年龄.cpp)
add_executable(2016.2 历届试题/2016年第七届/C语言A组/2/生日蜡烛.cpp)
add_executable(2016.3 历届试题/2016年第七届/C语言A组/3/方格填数.cpp)
add_executable(2016.4 历届试题/2016年第七届/C语言A组/4/快速排序.cpp)
add_executable(2016.5 历届试题/2016年第七届/C语言A组/5/消除尾一.cpp)
add_executable(2016.6 历届试题/2016年第七届/C语言A组/6/寒假作业.cpp)
add_executable(2016.7 历届试题/2016年第七届/C语言A组/7/剪邮票.cpp)
add_executable(2016.8 历届试题/2016年第七届/C语言A组/8/四平方和.cpp)
add_executable(2016.9 历届试题/2016年第七届/C语言A组/9/密码脱落.cpp)

add_executable(2017.1 历届试题/2017年第八届/C语言A组/1/迷宫.cpp)
add_executable(2017.2 历届试题/2017年第八届/C语言A组/2/跳蚱蜢.cpp)
add_executable(2017.4 历届试题/2017年第八届/C语言A组/4/方块分割.cpp)
add_executable(2017.5 历届试题/2017年第八届/C语言A组/5/字母组串.cpp)
add_executable(2017.6 历届试题/2017年第八届/C语言A组/6/最大公共子串.cpp)
add_executable(2017.7 历届试题/2017年第八届/C语言A组/7/正则问题.cpp)
add_executable(2017.8 历届试题/2017年第八届/C语言A组/8/包子凑数.cpp)
add_executable(2017.9 历届试题/2017年第八届/C语言A组/9/分巧克力.cpp)


add_executable(algo.1.5 蓝桥课程/算法很美/一.位运算/整数奇偶位互换.cpp)
add_executable(algo.2.6 蓝桥课程/算法很美/二.递归/汉诺塔.cpp)
add_executable(algo.3.14 蓝桥课程/算法很美/三.查找与排序/归并排序求逆序对.cpp)